--- a/serverlist/index.html
+++ b/serverlist/index.html
@@ -53,7 +53,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		<h2 class="dark-text">also you can add your server here :&nbsp;&nbsp;</h2>
 		<a class="play-button" href="https://github.com/online-mc/online-mc.github.io/issues/new?assignees=&labels=&projects=&template=serverlist-form.yml&title=server+name" >add eaglercraft/replit servers</a>
 		<h2 class="dark-text">use this for sharing relays :</h2>
-		<a class="play-button" href="https://online-mc.github.io/eaglerchat" >eaglerchat</a>
+		<a class="play-button" href="https://xseries5531.github.io/eaglerchat" >eaglerchat</a>
 		
         <p>&nbsp;</p>
         <p>&nbsp;</p>
@@ -70,17 +70,17 @@ window.addEventListener("load", () => {
 		<a class="link play-button" href="#ip__archmc" onclick='prompt("Press CTRL+C to copy the server IP.", "wss://mc.arch.lol");'>Click here for IP — 1.8.8 only</a>
 		<h2>&nbsp;</h2>
 		<h2>&nbsp;</h2>
-		<h2 class="dark-text">A*s pixel</h2>
-		<p class="dark-text">A*s pixel is a copy of hypixel but for eaglercraft with gamemodes like Bedwars etc </p>
+		<h2 class="dark-text">GalaxyPrisons</h2>
+		<p class="dark-text">GalaxyPrisons is a prisons server with a oneblock server with friendly staff and a great community!  </p>
 		<p>&nbsp;</p>
 		<script type="text/javascript">
 window.addEventListener("load", () => {
-	new ServerEmbed(document.getElementById("embed1"), "60%").ping("wss://mc.asspixel.net/", "" , "" , "" , "hideCracked");
+	new ServerEmbed(document.getElementById("embed1"), "60%").ping("wss://play.galaxyprisons.com/", "" , "" , "" , "hideCracked");
 });
 </script>
 		<div id="embed1"></div>
 		<p>&nbsp;</p>
-		<a class="link play-button" href="#ip__apixel" onclick='prompt("Press CTRL+C to copy the server IP.", "wss://web.asspixel.net/CAP/");'>1.5.2 IP </a><span class="version__separator" aria-hidden="true">&nbsp;</span><a class="link play-button" href="#ip__apixel" onclick='prompt("Press CTRL+C to copy the server IP.", "wss://mc.asspixel.net/");'> 1.8.8 IP</a>
+		<a class="link play-button" href="#ip__archmc" onclick='prompt("Press CTRL+C to copy the server IP.", "wss://play.galaxyprisons.com/");'>Click here for IP — 1.8.8 only</a>
 				<h2>&nbsp;</h2>
 		<h2>&nbsp;</h2>
 		<h2 class="dark-text">CreaCraft</h2>
